# timeseriescourse

./: .gitignore  CAC40_db.xlsx  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LabSession1_AppliedTimeSeries_Student.ipynb  LabSession2_AppliedTimeSeries_correction.ipynb  README.md  ex4.ipynb  ex5.ipynb  ex6.ipynb  lab1.ipynb  project.qmd  project.tex  pyproject.toml  useful_functions.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/timeseriescourse/: __init__.py
tests/: test_timeseriescourse.py
